--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,6 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="box_stroke_color_black">#FF000000</color>
+    <color name="hint_text_color_black">#FF000000</color>
 </resources>
